<resources>
    <string name="app_name">Community Shovel</string>
    <string name="question_message_text">Is Chicago the capital of Illinois?</string>
    <string name="home_button_text"> Home </string>
    <string name="create_request_button_text"> Create Request </string>
    <string name="profile_button_text"> View Profile </string>
    <string name="desc"> image </string>
    <string name="your_profile_text"> Your Profile </string>
    <string name="name_label"> Name: </string>
    <string name="first_name_label"> First Name: </string>
    <string name="last_name_label"> Last Name: </string>
    <string name="email_label"> Email: </string>
    <string name="distance_shoveled_label"> Distance Shoveled: </string>
    <string name="people_impacted_label"> People Impacted: </string>
    <string name="bio_label"> Biography: </string>
    <string name="edit_profile_button_text"> Edit </string>
    <string name="edit_your_profile_text"> Editing Your Profile </string>
    <string name="save_profile_button_text"> Save </string>
    <string name="logout_button_text"> Logout </string>

    <string name="location_label"> Location: </string>
    <string name="upvotes_label"> Upvotes: </string>
    <string name="info_label"> Info: </string>
    <string name="volunteers_label"> Volunteer(s): </string>
    <string name="status_label"> Status: </string>
    <string name="view_comments_label"><u>View Comments</u></string>

    <string name="email_hint"> Email </string>
    <string name="password_hint"> Password </string>
    <string name="signin_button_text"> Sign In </string>
    <string name="signup_button_text"> <u>Sign up here</u> </string>
    <string name="password_confirm_hint"> Confirm Password </string>
    <string name="first_name_hint"> First Name </string>
    <string name="last_name_hint"> Last Name </string>
    <string name="bio_hint"> Bio </string>
    <string name="submit_button_text"> Submit </string>

    <string name="profile_view_comments_label">View Comments</string>

    <string name="confirm_text"> Confirm </string>
    <string name="cancel_text"> Cancel </string>
    <string name="location_text"> Location: </string>
    <string name="info_text"> Info: </string>
    <string name="enter_text"> Enter Request Info Here </string>
    <string name="location_default_label"> Tap location on map </string>
</resources>