<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#333"
        android:textSize="75sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextEmailAddressSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddressSignUp"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password_confirm_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignUp"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/bio_hint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="196dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:text="@string/submit_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBio" />


</androidx.constraintlayout.widget.ConstraintLayout>