<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:orientation="vertical"
        android:gravity="top|center">

        // "Your Profile"
        <TextView
            android:id="@+id/profile_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:textColor="#333"
            android:text="Profile"/>

        // Profile picture
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/desc"
            android:background="@android:color/transparent"/>

        // Personal Information
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:gravity="left">

            // Information labels
            <LinearLayout
                android:id="@+id/information_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:orientation="vertical"
                android:gravity="right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/first_name_label"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/last_name_label"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/email_label"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/distance_shoveled_label"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/people_impacted_label"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/bio_label"/>
            </LinearLayout>
            // Actual information
            <LinearLayout
                android:id="@+id/information_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/information_labels"
                android:orientation="vertical"
                android:gravity="left">

                <TextView
                    android:id="@+id/profile_first_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#333"/>
                <TextView
                    android:id="@+id/profile_last_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#333"/>
                <TextView
                    android:id="@+id/profile_email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#333"/>
                <TextView
                    android:id="@+id/profile_distance_shoveled_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#333"/>
                <TextView
                    android:id="@+id/profile_people_impacted_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#333"/>
                <TextView
                    android:id="@+id/profile_bio_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#333"/>
            </LinearLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/profile_view_comments_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:background="@android:color/transparent"
            android:textColor="#04f"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:text="@string/profile_view_comments_label" />
    </LinearLayout>


    <!-- Nav Bar -->
    <include layout="@layout/navbar"/>
</LinearLayout>