<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="buttonBarButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="88"
    android:gravity="center"
    android:orientation="vertical">

    <!-- Map and Info -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="88"
        android:orientation="vertical">

        <!-- Map -->
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="65" />
        <!-- Info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:gravity="start">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:orientation="horizontal"
                    android:gravity="left">

                    <TextView
                        android:id="@+id/location_label"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:text="@string/location_text" />


                    <EditText
                        android:id="@+id/location_text"
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="88"
                        android:textColor="#ccc"
                        android:gravity="center|center_vertical"
                        android:text="@string/location_default_label"
                        android:paddingBottom="20dp" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:gravity="left">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:orientation="horizontal"
                    android:gravity="left">

                    <TextView
                        android:id="@+id/info_label"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:text="@string/info_text" />


                    <EditText
                        android:id="@+id/info_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="88"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_text"
                        android:paddingBottom="20dp" />
                </LinearLayout>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_text" />
                <!--            android:layout_weight="1"-->

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:text="@string/confirm_text" />
                <!--            android:layout_weight="1"-->

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




    <!-- Nav Bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:background="#bbbbbb"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/create_request_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc"
            android:scaleType="centerInside"
            android:src="@drawable/ic_create_request" />

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/create_request_button"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/profile_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/create_request_button"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc"
            android:scaleType="centerInside"
            android:src="@drawable/ic_profile" />


    </RelativeLayout>

</LinearLayout>

