<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="88"
        android:orientation="vertical"
        android:gravity="top|center">

        // "Your Profile"
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:textColor="#333"
            android:text="@string/edit_your_profile_text"/>

        <Button
            android:id="@+id/save_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/save_profile_button_text" />

        // Profile picture
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/desc"
            android:background="@android:color/transparent"/>

        // Personal Information
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:gravity="left">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:orientation="horizontal"
                android:gravity="left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/first_name_label"/>
                <EditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#333"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:gravity="left">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:orientation="horizontal"
                android:gravity="left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/last_name_label"/>
                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#333"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:gravity="left">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:orientation="horizontal"
                android:gravity="left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/bio_label"/>
                <EditText
                    android:id="@+id/bio_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#333"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <!-- Nav Bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:orientation="horizontal"
        android:background="#bbbbbb">

        <ImageButton
            android:id="@+id/create_request_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_create_request"
            android:contentDescription="@string/desc"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/create_request_button"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/desc"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/profile_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/create_request_button"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/desc"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"/>

    </RelativeLayout>
</LinearLayout>